--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,27 +106,27 @@
         <item>Си#</item>
     </string-array>
     <string-array name="interval_names">
-        <item>F♭</item>
-        <item>УМЕНЬШЕННУЮ КВинту</item>
-        <item>МАЛУЮ СЕКУНДУ</item>
-        <item>МАЛУЮ СЕКСТУ</item>
-        <item>МАЛУЮ ТЕРЦИЮ</item>
-        <item>МАЛУЮ СЕПТИМУ</item>
-        <item>ЧИСТУЮ КВАРТУ</item>
-        <item>ПРИМУ</item>
-        <item>ЧИСТУЮ КВИНТУ</item>
-        <item>БОЛЬШУЮ СЕКУНДУ</item>
-        <item>БОЛЬШУЮ СЕКСТУ</item>
-        <item>БОЛЬШУЮ ТЕРЦИЮ</item>
-        <item>БОЛЬШУЮ СЕПТИМУ</item>
-        <item>УВЕЛИЧЕННУЮ КВАРТУ</item>
-        <item>F#</item>
-        <item>УВЕЛИЧЕННУЮ КВИНТУ</item>
-        <item>УВЕЛИЧЕННУЮ СЕКУНДУ</item>
-        <item>УВЕЛИЧЕННУЮ СЕКСТУ</item>
-        <item>A#</item>
-        <item>E#</item>
-        <item>B#</item>
+        <item>Уменьшенную приму</item>
+        <item>Уменьшенную квинту</item>
+        <item>Малую секунду</item>
+        <item>Малую сексту</item>
+        <item>Малую терцию</item>
+        <item>Малую септиму</item>
+        <item>Чистую кварту</item>
+        <item>Приму</item>
+        <item>Чистую квинту</item>
+        <item>Большую секунду</item>
+        <item>Большую сексту</item>
+        <item>Большую терцию</item>
+        <item>Ббольшую септиму</item>
+        <item>Увеличенную кварту</item>
+        <item>Увеличенную приму</item>
+        <item>Увеличенную квинту</item>
+        <item>Увеличенную секунду</item>
+        <item>Увеличенную сексту</item>
+        <item>Увеличенную терцию</item>
+        <item>Увеличенную септиму</item>
+        <item>Увеличеннную кварту</item>
     </string-array>
     <string-array name="interval_names_2">
         <item>F♭</item>
